--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 
 <body>
-
-<h1>Checkout my coding projects I'm working on!</h1>
-  <h3>HTML</h3
-    <ul>
-      <li><a href="U/">Basics</a></li>
-      <li>Links</li>
+	<h1>Checkout my coding projects I'm working on!</h1>
+	<h3>HTML</h3
+    		<ul>
+    			<li><a href="U/CS_A1.html">Basics/lists</a></li>
+			<li><a href="U/CS_A2.html">Links</a></li>
+		</ul>	
 
 </body>
 
