--- a/U/CSS Glow/cssglow.html
+++ b/U/CSS Glow/cssglow.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="styles/main.css">
+  <link rel="stylesheet" type="text/css" href="styles/styles/glow.css">
 
   <title>CS HW9</title>
   
