--- a/U/CSS Gradients/gradients.html
+++ b/U/CSS Gradients/gradients.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="styles/gradient.css">
 
-  <title>CS HW9</title>
+  <title>Color Gradients</title>
   
 </head>
 
