--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     		<ul>
     			<li><a href="U/CS_A1.html">Basics/lists</a></li>
 			<li><a href="U/CS_A2.html">Links</a></li>
-			<li><a href="U/CSS Gradients/gradients.html">Glow</a></li>
+			<li><a href="U/CSS Gradients/gradients.html">Gradients</a></li>
 		</ul>	
 
 </body>
