--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     			<li><a href="U/CS_A1.html">Basics/lists</a></li>
 			<li><a href="U/CS_A2.html">Links</a></li>
 			<li><a href="U/CSS Gradients/gradients.html">Gradients</a></li>
+			<li><a href="U/CSS Glow/glow.html">Glow</a></li>
 		</ul>	
 
 </body>
