--- a/index.html
+++ b/index.html
@@ -11,14 +11,22 @@
 </head>
 
 <body>
+	
 	<h1>Checkout my coding projects I'm working on!</h1>
+	
 	<h3>HTML</h3
+		
     		<ul>
     			<li><a href="U/CS_A1.html">Basics/lists</a></li>
 			<li><a href="U/CS_A2.html">Links</a></li>
+		</ul>
+	
+	<h3>CSS</h3>
+	
+		<ul>
 			<li><a href="U/CSS Gradients/gradients.html">Gradients</a></li>
 			<li><a href="U/CSS Glow/glow.html">Glow</a></li>
-		</ul>	
+		</ul>
 
 </body>
 
