--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-  	<link rel="stylesheet" type="text/css" href="styles/Main.css">
+  	<link rel="stylesheet" type="text/css" href="styles/main.css">
 
 	<title>AL Code Projects</title>
 </head>
