--- a/U/Links/links.html
+++ b/U/Links/links.html
@@ -5,9 +5,9 @@
 	<meta charset="utf-8">
  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-  	<link rel="stylesheet" type="text/css" href="styles/CS A2.css">
+  	<link rel="stylesheet" type="text/css" href="styles/links.css">
 
-	<title>CS A2</title>
+	<title>HTML Links</title>
 </head>
 
 <body>
