--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	<h3>HTML</h3
 		
     		<ul>
-    			<li><a href="U/CS_A1.html">Basics/lists</a></li>
-			<li><a href="U/CS_A2.html">Links</a></li>
+    			<li><a href="U/Basics/basics.html">Basics/lists</a></li>
+			<li><a href="U/Links/links.html">Links</a></li>
 		</ul>
 	
 	<h3>CSS</h3>
