--- a/U/Links/links.html
+++ b/U/Links/links.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+	
+<div>
 
 	<h1>GUTS</h1>
 	<p>I am the Beserker!</p>
@@ -24,6 +26,9 @@
 		</ol>
 
 	<p>Read about me on <a href="https://berserk.fandom.com/wiki/Guts">Fandom!</a></p>
+	
+</div>
+	
 </body>
 
 </html>
