--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 <body>
 	
+	<div>
+		
 	<h1>Checkout my coding projects I'm working on!</h1>
 	
 	<h3>HTML</h3
@@ -25,6 +27,7 @@
 			<li><a href="U/CSS Gradients/gradients.html">Gradients</a></li>
 			<li><a href="U/CSS Glow/glow.html">Glow</a></li>
 		</ul>
+	</div>
 
 </body>
 
