--- a/U/Links/links.html
+++ b/U/Links/links.html
@@ -16,7 +16,7 @@
 
 	<h1>GUTS</h1>
 	<p>I am the Beserker!</p>
-	<img src="https://vignette.wikia.nocookie.net/p__/images/8/81/001guts.jpg/revision/latest?cb=20170324041445&path-prefix=protagonist" type="">
+	<a href="https://vignette.wikia.nocookie.net/p__/images/8/81/001guts.jpg/revision/latest?cb=20170324041445&path-prefix=protagonist"><img src="https://vignette.wikia.nocookie.net/p__/images/8/81/001guts.jpg/revision/latest?cb=20170324041445&path-prefix=protagonist" type=""></a>
 
 	<h3>My wepons:</h3>
 		<ol>
