--- a/U/Links/links.html
+++ b/U/Links/links.html
@@ -16,8 +16,10 @@
 
 	<h1>GUTS</h1>
 	<p>I am the Beserker!</p>
+	<div>
 	<a href="https://vignette.wikia.nocookie.net/p__/images/8/81/001guts.jpg/revision/latest?cb=20170324041445&path-prefix=protagonist"><img src="https://vignette.wikia.nocookie.net/p__/images/8/81/001guts.jpg/revision/latest?cb=20170324041445&path-prefix=protagonist" type=""></a>
-
+		<p><span><--link</span></p>
+	</div
 	<h3>My wepons:</h3>
 		<ol>
 			<li>Dragon Slayer(sword)</li>
@@ -25,7 +27,7 @@
 			<li>Hand Cannon</li>
 		</ol>
 
-	<p>Read about me on <a href="https://berserk.fandom.com/wiki/Guts">Fandom!</a></p>
+	<p>Read about me on <a href="https://berserk.fandom.com/wiki/Guts">Fandom!<span><---link</span></a></p>
 	
 </div>
 	
