--- a/U/Links/links.html
+++ b/U/Links/links.html
@@ -27,7 +27,7 @@
 			<li>Hand Cannon</li>
 		</ol>
 
-	<p>Read about me on <a href="https://berserk.fandom.com/wiki/Guts">Fandom!</a><span><---link</span></p>
+	<p>Read about me on <a href="https://berserk.fandom.com/wiki/Guts">Fandom!</a><span> <--link</span></p>
 	
 </div>
 	
