--- a/U/Links/links.html
+++ b/U/Links/links.html
@@ -16,10 +16,12 @@
 
 	<h1>GUTS</h1>
 	<p>I am the Beserker!</p>
+	
 	<div>
-	<a href="https://vignette.wikia.nocookie.net/p__/images/8/81/001guts.jpg/revision/latest?cb=20170324041445&path-prefix=protagonist"><img id="inline-img" src="https://vignette.wikia.nocookie.net/p__/images/8/81/001guts.jpg/revision/latest?cb=20170324041445&path-prefix=protagonist" type=""></a>
+		<a href="https://vignette.wikia.nocookie.net/p__/images/8/81/001guts.jpg/revision/latest?cb=20170324041445&path-prefix=protagonist"><img id="inline-img" src="https://vignette.wikia.nocookie.net/p__/images/8/81/001guts.jpg/revision/latest?cb=20170324041445&path-prefix=protagonist" type=""></a>
 		<p><span><--link</span></p>
-	</div
+	</div>
+	
 	<h3>My wepons:</h3>
 		<ol>
 			<li>Dragon Slayer(sword)</li>
