--- a/U/Links/links.html
+++ b/U/Links/links.html
@@ -19,7 +19,7 @@
 	
 	<div>
 		<a href="https://vignette.wikia.nocookie.net/p__/images/8/81/001guts.jpg/revision/latest?cb=20170324041445&path-prefix=protagonist"><img id="inline-img" src="https://vignette.wikia.nocookie.net/p__/images/8/81/001guts.jpg/revision/latest?cb=20170324041445&path-prefix=protagonist" type=""></a>
-		<p><span><--link</span></p>
+		<p><span class="red"><--link</span></p>
 	</div>
 	
 	<h3>My wepons:</h3>
@@ -29,7 +29,7 @@
 			<li>Hand Cannon</li>
 		</ol>
 
-	<p>Read about me on <a href="https://berserk.fandom.com/wiki/Guts">Fandom!</a><span> <--link</span></p>
+	<p>Read about me on <a href="https://berserk.fandom.com/wiki/Guts">Fandom!</a><span class="red"> <--link</span></p>
 	
 </div>
 	
