--- a/U/Links/links.html
+++ b/U/Links/links.html
@@ -18,8 +18,8 @@
 	<p>I am the Beserker!</p>
 	
 	<div>
-		<a href="https://vignette.wikia.nocookie.net/p__/images/8/81/001guts.jpg/revision/latest?cb=20170324041445&path-prefix=protagonist"><img id="inline-img" src="https://vignette.wikia.nocookie.net/p__/images/8/81/001guts.jpg/revision/latest?cb=20170324041445&path-prefix=protagonist" type=""></a>
-		<p><span class="red"><--link</span></p>
+		<a href="https://vignette.wikia.nocookie.net/p__/images/8/81/001guts.jpg/revision/latest?cb=20170324041445&path-prefix=protagonist"><img src="https://vignette.wikia.nocookie.net/p__/images/8/81/001guts.jpg/revision/latest?cb=20170324041445&path-prefix=protagonist" type=""></a>
+		<p><span class="red">^link</span></p>
 	</div>
 	
 	<h3>My wepons:</h3>
