--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     		<ul>
     			<li><a href="U/Basics/basics.html">Basics/lists</a></li>
 			<li><a href="U/Links/links.html">Links</a></li>
+			<li><a href="U/Tables/tables.html"></a></li>
 	
 	<h3>CSS</h3>
 	
