--- a/U/Tables/tables.html
+++ b/U/Tables/tables.html
@@ -13,7 +13,7 @@
 <body>
 	
 <div class="center">
-	<h1>First Generation Pokemon</h1>
+	<h1>First Gen Pokemon</h1>
 	<table>
 		<thead>
 			<th>Name</th>
