--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     			<li><a href="U/Basics/basics.html">Basics/lists</a></li>
 			<li><a href="U/Links/links.html">Links</a></li>
 			<li><a href="U/Tables/tables.html">Tables</a></li>
+			<li><a href="U/Tables/forms.html">Forms</a></li>
 	
 	<h3>CSS</h3>
 	
