--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			<li><a href="U/Links/links.html">Links</a></li>
 			<li><a href="U/Tables/tables.html">Tables</a></li>
 			<li><a href="U/Forms/forms.html">Forms</a></li>
+			<li><a href="U/Blog/blog.html">Blog</a></li>
 	
 	<h3>CSS</h3>
 	
