--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 			<li><a href="U/Tables/tables.html">Tables</a></li>
 			<li><a href="U/Forms/forms.html">Forms</a></li>
 			<li><a href="U/Blog/blog.html">Blog</a></li>
+			<li><a href="U/Photo_Gallery/photogallery.html">Photo Gallery</a></li>
 	
 	<h3>CSS</h3>
 	
