--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<li><a href="U/Photo_Gallery/photogallery.html">Photo Gallery</a></li>
 		
 	<h3>Bootstrap</h3>
-		<li><a href="U/Bootstrap/LandingPage/landingpage.html"></a>Landing Page</li>
+		<li><a href="U/Bootstrap/LandingPage/landingpage.html">Landing Page</a></li>
 	
 	<h3>CSS</h3>
 	
