--- a/U/Bootstrap/LandingPage/landingpage.html
+++ b/U/Bootstrap/LandingPage/landingpage.html
@@ -46,9 +46,9 @@
       <div calss="col-lg-12">
         <div id="content">
           <h1>Purrfect Match</h1>
-          <h3>The Only Human-Feline Dating App</h3>
+          <h3>The Only Human-Feline Match App</h3>
           <hr>
-          <button type="button" class="btn btn-primary btn-lg"><i class="fas fa-paw bold"></i> Get Started!</button>
+          <button type="button" class="btn btn-light btn-lg"><i class="fas fa-paw bold"></i> Get Started!</button>
         </div>
       </div>
     </div>
